--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Noto+Sans:wght@400;600&family=Roboto+Condensed:wght@400;700&family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
+    <script async src="js/script.js"></script>
+  </head>
+
+  <body id="index-page" class="fixed-page">
+    <header>
+      <nav  id="main-navbar">
+        <div id="navbar-container">
+          <ul>
+            <li id="onpage"><a href="index.html">Home Page</a></li>
+            <li><a href="purchase.html">Tickets</a></li>
+            <li><a href="dates.html">2024 Tour Dates</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <section class="movie_picture">
+    </section>
+    <section class="movie_description">
+    </section>
+  </body>
+</html>
 
