--- a/dates.html
+++ b/dates.html
@@ -23,9 +23,10 @@
         </div>
       </nav>
     </header>
-    <section class="movie_picture">
+    <h1>LOVE IS BLIND 2024 TOUR</h1>
+    <section class="two_movies">
+      <a
     </section>
-    <section class="movie_description">
-    </section>
+  
   </body>
 </html>
