--- a/dates.html
+++ b/dates.html
@@ -25,7 +25,19 @@
     </header>
     <h1>LOVE IS BLIND 2024 TOUR</h1>
     <section class="two_movies">
-      <a
+      <ul>
+        <li>
+          <a href="#">
+            <img src="#" alt="The Room">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="#" alt="Big Shark">
+          </a>
+        </li>
+      </ul>
+      
     </section>
   
   </body>
