--- a/dates.html
+++ b/dates.html
@@ -37,8 +37,25 @@
           </a>
         </li>
       </ul>
-      
     </section>
-  
+    <section class="chosen_movie">
+      <ul>
+        <li>
+          <h2>Dates</h2>
+        </li>
+        <li>
+          <h2>Movie</h2>
+        </li>
+        <li>
+          <h2>Cinema</h2>
+        </li>
+        <li>
+           <h2>Location</h2>
+        </li>
+      </ul>
+    </section>
+    <footer>
+    <p><a href="contact.html">Contact us</a>for local screenings</p>
+    </footer>
   </body>
 </html>
