--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </nav>
     </header>
     <section class="movie_picture">
+      <img src=".jpg" alt="">
     </section>
     <section class="movie_description">
     </section>
